@@ -127,3 +127,15 @@ So the above mentioned ``index_page`` entry point view can be defined as follows
     def index_page(request):
         """Suppose this view is served at /"""
         return render(request, 'mytemplates/index.html')
+
+For cases when you want to route multiple autogenerated page elements with IDs having
+a common prefix (e.g.: in ``myel-1``, ``myel-44``, ``myel-something`` common prefix is ``myel-``)
+to a single handler use star (``*``):
+
+.. code-block:: python
+
+    @ajax_dispatch({
+        'myel-*': common_handler,
+    })
+    def my_iew(request):
+        ...
